# testKokkos

./: .gitmodules  CMakeLists.txt  array_to_view.cxx  cmac.cxx  common.hpp  const_t.cxx  enable_if_rank.cxx  example.cxx  extent_order.cxx  hash_view.cxx  lr_deep_copy.cxx  mdrange.cxx  mdrp.cxx  minmax.cxx  multi_reduce.cxx  offset_view.cxx  random.cxx  reduce_view.cxx  scalar_view.cxx  static_views.cxx  subview.cxx  timed_p4.cxx  unmanaged_t.cxx  vector_range.cxx  view_rawptr.cxx
